# Homework

VladislavOvchinnikov/: Goldbach.py  README.md  Task1.1.py  Task1.2.py  Task1.3.py  Task1.3_1.py  Task1.4.py  Task1.5.py  Task1.6_1.py  Task1.6_2.py  Task4.1.py  Task4.10.py  Task4.11.py  Task4.2.py  Task4.3.py  Task4.4.py  Task4.5.py  Task4.6.py  Task4.7.py  Task4.8.py  Task4.9.py  Task5.1.py  Task5.2.py  Task5.3.py  Task5.4.py  Task5.5.py  Task5.6.py  Task6.1.py  Task6.2.py  Task6.3.py  Task6.4.py  Task6.6.py  Task6.7.py  Task6.8.py  Task7.1.py  Task7.10.py  Task7.11.py  Task7.2.py  Task7.3.py  Task7.4.py  (+6 more)
VladislavOvchinnikov/Task5.7/: mod_a.py
VladislavOvchinnikov/py-rss/: .gitignore  pyproject.toml
VladislavOvchinnikov/py-rss-client/: package-lock.json
VladislavOvchinnikov/py-rss-client/public/: index.html
VladislavOvchinnikov/py-rss-client/src/: App.svelte
VladislavOvchinnikov/py-rss/py_rss/: rss_reader.py
VladislavOvchinnikov/py-rss/py_rss/api/: app.py
VladislavOvchinnikov/py-rss/py_rss/cli/: __init__.py  args.py  cache.py  export.py  rss.py  version.py
VladislavOvchinnikov/py-rss/py_rss/tests/: test_cli.py
