[tool.poetry]
name = "py-rss"
version = "0.4.0"
description = "Python app for parsing RSS feeds."
authors = ["Jahor Laryn <mrojahor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
bs4 = "^0.0.1"
requests = "^2.26.0"
lxml = "^4.6.3"
EbookLib = "^0.17.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
